--- a/notebooks/basic_gendataset.ipynb
+++ b/notebooks/basic_gendataset.ipynb
@@ -103,7 +103,7 @@
     "# Then, let's save them! \n",
     "# Grayscale\n",
     "def rgb2gray(rgb):\n",
-    "    if len(currimg.shape) is 3:\n",
+    "    if len(rgb.shape) is 3:\n",
     "        return np.dot(rgb[...,:3], [0.299, 0.587, 0.114])\n",
     "    else:\n",
     "        print (\"Current Image if GRAY!\")\n",
