--- a/notebooks/basic_gendataset.ipynb
+++ b/notebooks/basic_gendataset.ipynb
@@ -111,7 +111,17 @@
     "if use_gray:\n",
     "    totalimg   = np.ndarray((imgcnt, imgsize[0]*imgsize[1]))\n",
     "else:\n",
-    "    totalimg   = np.ndarray((imgcnt, imgsize[0]*imgsize[1]*3))\n",
+    "    totalimg   = np.ndarray((imgcnt, imgsize[0]*imgsize[1]*3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "totallabel = np.ndarray((imgcnt, nclass))\n",
     "imgcnt     = 0\n",
     "for i, relpath in zip(range(nclass), paths):\n",
@@ -145,15 +155,6 @@
     "testimg    = totalimg[testidx, :]\n",
     "testlabel  = totallabel[testidx, :]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
