--- a/notebooks/mlp_customdata_basic.ipynb
+++ b/notebooks/mlp_customdata_basic.ipynb
@@ -16,7 +16,6 @@
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
-    "from tensorflow.examples.tutorials.mnist import input_data\n",
     "%matplotlib inline  "
    ]
   },
@@ -65,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -85,161 +84,242 @@
     "batch_size      = ntrain\n",
     "display_step    = nclass\n",
     "\n",
-    "# Network\n",
-    "n_input  = dim\n",
-    "n_output = 10\n",
-    "weights  = {\n",
-    "    'wc1': tf.Variable(tf.random_normal([3, 3, 1, 64], stddev=0.1)),\n",
-    "    'wc2': tf.Variable(tf.random_normal([3, 3, 64, 64], stddev=0.1)),\n",
-    "    'wd1': tf.Variable(tf.random_normal([5*5*64, 256], stddev=0.1)),\n",
-    "    'wd2': tf.Variable(tf.random_normal([256, n_output], stddev=0.1))\n",
-    "}\n",
-    "biases   = {\n",
-    "    'bc1': tf.Variable(tf.random_normal([64], stddev=0.1)),\n",
-    "    'bc2': tf.Variable(tf.random_normal([64], stddev=0.1)),\n",
-    "    'bd1': tf.Variable(tf.random_normal([256], stddev=0.1)),\n",
-    "    'bd2': tf.Variable(tf.random_normal([n_output], stddev=0.1))\n",
-    "}\n",
-    "\n",
-    "def conv_basic(_input, _w, _b, _keepratio):\n",
-    "    # Input\n",
-    "    _input_r = tf.reshape(_input, shape=[-1, 30, 30, 1])\n",
-    "    \n",
-    "    # Conv1\n",
-    "    _conv1 = tf.nn.relu(tf.nn.bias_add(\n",
-    "            tf.nn.conv2d(_input_r, _w['wc1'], strides=[1, 1, 1, 1], padding='SAME')\n",
-    "            , _b['bc1']))\n",
-    "    _pool1 = tf.nn.max_pool(_conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='SAME')\n",
-    "    _pool_dr1 = tf.nn.dropout(_pool1, _keepratio)\n",
-    "    \n",
-    "    # Conv2\n",
-    "    _conv2 = tf.nn.relu(tf.nn.bias_add(\n",
-    "            tf.nn.conv2d(_pool_dr1, _w['wc2'], strides=[1, 1, 1, 1], padding='SAME')\n",
-    "            , _b['bc2']))\n",
-    "    _pool2 = tf.nn.max_pool(_conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='SAME')\n",
-    "    _pool_dr2 = tf.nn.dropout(_pool2, _keepratio)\n",
-    "    \n",
-    "    # Vectorize\n",
-    "    _dense1 = tf.reshape(_pool_dr2, [-1, _w['wd1'].get_shape().as_list()[0]])\n",
-    "    \n",
-    "    # Fc1\n",
-    "    _fc1 = tf.nn.relu(tf.add(tf.matmul(_dense1, _w['wd1']), _b['bd1']))\n",
-    "    _fc_dr1 = tf.nn.dropout(_fc1, _keepratio)\n",
-    "    \n",
-    "    # Fc2\n",
-    "    _out = tf.add(tf.matmul(_fc_dr1, _w['wd2']), _b['bd2'])\n",
-    "    \n",
-    "    # Return everything\n",
-    "    out = {\n",
-    "        'input_r': _input_r,\n",
-    "        'conv1': _conv1,\n",
-    "        'pool1': _pool1,\n",
-    "        'pool1_dr1': _pool_dr1,\n",
-    "        'conv2': _conv2,\n",
-    "        'pool2': _pool2,\n",
-    "        'pool_dr2': _pool_dr2,\n",
-    "        'dense1': _dense1,\n",
-    "        'fc1': _fc1,\n",
-    "        'fc_dr1': _fc_dr1,\n",
-    "        'out': _out\n",
-    "    }\n",
-    "    return out\n",
-    "\n",
+    "# Network Parameters\n",
+    "n_hidden_1 = 256 # 1st layer num features\n",
+    "n_hidden_2 = 128 # 2nd layer num features\n",
+    "n_input    = dim # data input (img shape: 28*28)\n",
+    "n_classes  = nclass # total classes (0-9 digits)\n",
     "\n",
     "# tf Graph input\n",
-    "x = tf.placeholder(tf.float32, [None, n_input])\n",
-    "y = tf.placeholder(tf.float32, [None, n_output])\n",
-    "keepratio = tf.placeholder(tf.float32)\n",
+    "x = tf.placeholder(\"float\", [None, n_input])\n",
+    "y = tf.placeholder(\"float\", [None, n_classes])\n",
     "\n",
-    "# Functions! \n",
-    "_pred = conv_basic(x, weights, biases, keepratio)['out']\n",
-    "cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(_pred, y))\n",
-    "optm = tf.train.AdamOptimizer(learning_rate=learning_rate).minimize(cost)\n",
-    "_corr = tf.equal(tf.argmax(_pred,1), tf.argmax(y,1)) # Count corrects\n",
-    "accr = tf.reduce_mean(tf.cast(_corr, tf.float32)) # Accuracy\n",
-    "init = tf.initialize_all_variables()\n",
-    "\n",
+    "# Create model\n",
+    "def multilayer_perceptron(_X, _weights, _biases):\n",
+    "    layer_1 = tf.nn.sigmoid(tf.add(tf.matmul(_X, _weights['h1']), _biases['b1'])) \n",
+    "    layer_2 = tf.nn.sigmoid(tf.add(tf.matmul(layer_1, _weights['h2']), _biases['b2']))\n",
+    "    return (tf.sigmoid(tf.matmul(layer_2, _weights['out']) + _biases['out']))\n",
+    "    # return (tf.sigmoid(tf.matmul(layer_2, _weights['out']) + _biases['out']))\n",
+    "    \n",
+    "# Store layers weight & bias\n",
+    "stddev = 0.1 # <== This greatly affects accuracy!! \n",
+    "weights = {\n",
+    "    'h1': tf.Variable(tf.random_normal([n_input, n_hidden_1], stddev=stddev)),\n",
+    "    'h2': tf.Variable(tf.random_normal([n_hidden_1, n_hidden_2], stddev=stddev)),\n",
+    "    'out': tf.Variable(tf.random_normal([n_hidden_2, n_classes], stddev=stddev))\n",
+    "}\n",
+    "biases = {\n",
+    "    'b1': tf.Variable(tf.random_normal([n_hidden_1])),\n",
+    "    'b2': tf.Variable(tf.random_normal([n_hidden_2])),\n",
+    "    'out': tf.Variable(tf.random_normal([n_classes]))\n",
+    "}\n",
     "print (\"Network Ready to Go!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'mnist' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-e999b139df8c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtraining_epochs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0mavg_cost\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[0mtotal_batch\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmnist\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnum_examples\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m     \u001b[1;31m# Loop over all batches\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtotal_batch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'mnist' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# Do some optimizations\n",
-    "sess = tf.Session()\n",
-    "sess.run(init)\n",
-    "\n",
-    "for epoch in range(training_epochs):\n",
-    "    avg_cost = 0.\n",
-    "    total_batch = int(mnist.train.num_examples/batch_size)\n",
-    "    # Loop over all batches\n",
-    "    for i in range(total_batch):\n",
-    "        batch_xs, batch_ys = mnist.train.next_batch(batch_size)\n",
-    "        # Fit training using batch data\n",
-    "        sess.run(optm, feed_dict={x: batch_xs, y: batch_ys, keepratio:0.7})\n",
-    "        # Compute average loss\n",
-    "        avg_cost += sess.run(cost, feed_dict={x: batch_xs, y: batch_ys, keepratio:1.})/total_batch\n",
-    "\n",
-    "    # Display logs per epoch step\n",
-    "    if epoch % display_step == 0: \n",
-    "        print (\"Epoch: %03d/%03d cost: %.9f\" % (epoch, training_epochs, avg_cost))\n",
-    "        train_acc = sess.run(accr, feed_dict={x: batch_xs, y: batch_ys, keepratio:1.})\n",
-    "        print (\" Training accuracy: %.3f\" % (train_acc))\n",
-    "        test_acc = sess.run(accr, feed_dict={x: testimg, y: testlabel, keepratio:1.})\n",
-    "        print (\" Test accuracy: %.3f\" % (test_acc))\n",
-    "\n",
-    "    # Save Net\n",
-    "    if epoch % save_step == 0:\n",
-    "        saver.save(sess, \"nets/cnn_basic.ckpt-\" + str(epoch))\n",
-    "\n",
-    "print (\"Optimization Finished.\")\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Construct model\n",
+    "pred = multilayer_perceptron(x, weights, biases)\n",
+    "\n",
+    "# Define loss and optimizer\n",
+    "cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(pred, y)) # Softmax loss\n",
+    "optm = tf.train.AdamOptimizer(learning_rate=learning_rate).minimize(cost) # Adam Optimizer\n",
+    "corr = tf.equal(tf.argmax(pred, 1), tf.argmax(y, 1))    \n",
+    "accr = tf.reduce_mean(tf.cast(corr, \"float\"))\n",
+    "\n",
+    "# Initializing the variables\n",
+    "init = tf.initialize_all_variables()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 000/100 cost: 0.699896038\n",
+      "Training accuracy: 0.464\n",
+      "Epoch: 002/100 cost: 0.689470649\n",
+      "Training accuracy: 0.551\n",
+      "Epoch: 004/100 cost: 0.681474209\n",
+      "Training accuracy: 0.565\n",
+      "Epoch: 006/100 cost: 0.686457396\n",
+      "Training accuracy: 0.464\n",
+      "Epoch: 008/100 cost: 0.672411621\n",
+      "Training accuracy: 0.725\n",
+      "Epoch: 010/100 cost: 0.683960438\n",
+      "Training accuracy: 0.507\n",
+      "Epoch: 012/100 cost: 0.668209076\n",
+      "Training accuracy: 0.623\n",
+      "Epoch: 014/100 cost: 0.646869183\n",
+      "Training accuracy: 0.638\n",
+      "Epoch: 016/100 cost: 0.652468562\n",
+      "Training accuracy: 0.681\n",
+      "Epoch: 018/100 cost: 0.658711195\n",
+      "Training accuracy: 0.710\n",
+      "Epoch: 020/100 cost: 0.647504389\n",
+      "Training accuracy: 0.623\n",
+      "Epoch: 022/100 cost: 0.616698384\n",
+      "Training accuracy: 0.783\n",
+      "Epoch: 024/100 cost: 0.635503173\n",
+      "Training accuracy: 0.768\n",
+      "Epoch: 026/100 cost: 0.621062279\n",
+      "Training accuracy: 0.652\n",
+      "Epoch: 028/100 cost: 0.595718801\n",
+      "Training accuracy: 0.812\n",
+      "Epoch: 030/100 cost: 0.620238185\n",
+      "Training accuracy: 0.710\n",
+      "Epoch: 032/100 cost: 0.561077714\n",
+      "Training accuracy: 0.841\n",
+      "Epoch: 034/100 cost: 0.611644864\n",
+      "Training accuracy: 0.696\n",
+      "Epoch: 036/100 cost: 0.588022828\n",
+      "Training accuracy: 0.754\n",
+      "Epoch: 038/100 cost: 0.592636704\n",
+      "Training accuracy: 0.783\n",
+      "Epoch: 040/100 cost: 0.583840489\n",
+      "Training accuracy: 0.797\n",
+      "Epoch: 042/100 cost: 0.574917436\n",
+      "Training accuracy: 0.783\n",
+      "Epoch: 044/100 cost: 0.558481216\n",
+      "Training accuracy: 0.797\n",
+      "Epoch: 046/100 cost: 0.563241065\n",
+      "Training accuracy: 0.754\n",
+      "Epoch: 048/100 cost: 0.576346815\n",
+      "Training accuracy: 0.739\n",
+      "Epoch: 050/100 cost: 0.554930866\n",
+      "Training accuracy: 0.710\n",
+      "Epoch: 052/100 cost: 0.552974403\n",
+      "Training accuracy: 0.797\n",
+      "Epoch: 054/100 cost: 0.504612565\n",
+      "Training accuracy: 0.899\n",
+      "Epoch: 056/100 cost: 0.512061715\n",
+      "Training accuracy: 0.884\n",
+      "Epoch: 058/100 cost: 0.507074118\n",
+      "Training accuracy: 0.870\n",
+      "Epoch: 060/100 cost: 0.484269679\n",
+      "Training accuracy: 0.913\n",
+      "Epoch: 062/100 cost: 0.509691119\n",
+      "Training accuracy: 0.899\n",
+      "Epoch: 064/100 cost: 0.449061930\n",
+      "Training accuracy: 0.928\n",
+      "Epoch: 066/100 cost: 0.482412994\n",
+      "Training accuracy: 0.928\n",
+      "Epoch: 068/100 cost: 0.459846765\n",
+      "Training accuracy: 0.986\n",
+      "Epoch: 070/100 cost: 0.490996778\n",
+      "Training accuracy: 0.942\n",
+      "Epoch: 072/100 cost: 0.482977659\n",
+      "Training accuracy: 0.913\n",
+      "Epoch: 074/100 cost: 0.435161650\n",
+      "Training accuracy: 0.957\n",
+      "Epoch: 076/100 cost: 0.426242411\n",
+      "Training accuracy: 0.942\n",
+      "Epoch: 078/100 cost: 0.440837383\n",
+      "Training accuracy: 0.942\n",
+      "Epoch: 080/100 cost: 0.419744790\n",
+      "Training accuracy: 0.957\n",
+      "Epoch: 082/100 cost: 0.391887933\n",
+      "Training accuracy: 1.000\n",
+      "Epoch: 084/100 cost: 0.394616008\n",
+      "Training accuracy: 1.000\n",
+      "Epoch: 086/100 cost: 0.387836933\n",
+      "Training accuracy: 0.986\n",
+      "Epoch: 088/100 cost: 0.433516860\n",
+      "Training accuracy: 0.884\n",
+      "Epoch: 090/100 cost: 0.388486624\n",
+      "Training accuracy: 0.986\n",
+      "Epoch: 092/100 cost: 0.394950092\n",
+      "Training accuracy: 0.986\n",
+      "Epoch: 094/100 cost: 0.370714962\n",
+      "Training accuracy: 1.000\n",
+      "Epoch: 096/100 cost: 0.381722510\n",
+      "Training accuracy: 0.971\n",
+      "Epoch: 098/100 cost: 0.386587530\n",
+      "Training accuracy: 0.986\n",
+      "Optimization Finished!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Launch the graph\n",
+    "sess = tf.Session()\n",
+    "sess.run(init)\n",
+    "\n",
+    "# Training cycle\n",
+    "for epoch in range(training_epochs):\n",
+    "    avg_cost = 0.\n",
+    "    total_batch = int(ntrain/batch_size)\n",
+    "    # Loop over all batches\n",
+    "    for i in range(total_batch):\n",
+    "        randidx = np.random.randint(ntrain, size=batch_size)\n",
+    "        batch_xs = trainimg[randidx, :]\n",
+    "        batch_ys = trainlabel[randidx, :]   \n",
+    "        # Fit training using batch data\n",
+    "        sess.run(optm, feed_dict={x: batch_xs, y: batch_ys})\n",
+    "        # Compute average loss\n",
+    "        avg_cost += sess.run(cost, feed_dict={x: batch_xs, y: batch_ys})/total_batch\n",
+    "    # Display logs per epoch step\n",
+    "    if epoch % display_step == 0:\n",
+    "        print (\"Epoch: %03d/%03d cost: %.9f\" % (epoch, training_epochs, avg_cost))\n",
+    "        train_acc = sess.run(accr, feed_dict={x: batch_xs, y: batch_ys})\n",
+    "        print (\"Training accuracy: %.3f\" % (train_acc))\n",
+    "\n",
+    "print (\"Optimization Finished!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy: 0.833\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_acc = sess.run(accr, \n",
+    "                    feed_dict={x: testimg, y: testlabel})\n",
+    "print (\"Test accuracy: %.3f\" % (test_acc))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
