--- a/notebooks/cnn_mnist_basic.ipynb
+++ b/notebooks/cnn_mnist_basic.ipynb
@@ -66,78 +66,76 @@
     "\n",
     "# Parameters\n",
     "learning_rate   = 0.001\n",
-    "training_epochs = 5\n",
+    "training_epochs = 100\n",
     "batch_size      = 100\n",
     "display_step    = 1\n",
     "\n",
     "# Network\n",
     "n_input  = 784\n",
     "n_output = 10\n",
-    "weights  = {\n",
-    "    'wc1': tf.Variable(tf.random_normal([3, 3, 1, 64], stddev=0.1)),\n",
-    "    'wc2': tf.Variable(tf.random_normal([3, 3, 64, 128], stddev=0.1)),\n",
-    "    'wd1': tf.Variable(tf.random_normal([7*7*128, 1024], stddev=0.1)),\n",
-    "    'wd2': tf.Variable(tf.random_normal([1024, n_output], stddev=0.1))\n",
-    "}\n",
-    "biases   = {\n",
-    "    'bc1': tf.Variable(tf.random_normal([64], stddev=0.1)),\n",
-    "    'bc2': tf.Variable(tf.random_normal([128], stddev=0.1)),\n",
-    "    'bd1': tf.Variable(tf.random_normal([1024], stddev=0.1)),\n",
-    "    'bd2': tf.Variable(tf.random_normal([n_output], stddev=0.1))\n",
-    "}\n",
-    "\n",
-    "def conv_basic(_input, _w, _b, _keepratio):\n",
-    "    # Input\n",
-    "    _input_r = tf.reshape(_input, shape=[-1, 28, 28, 1])\n",
-    "    # Conv1\n",
-    "    _conv1 = tf.nn.relu(tf.nn.bias_add(\n",
-    "            tf.nn.conv2d(_input_r, _w['wc1'], strides=[1, 1, 1, 1], padding='SAME')\n",
-    "            , _b['bc1']))\n",
-    "    _pool1 = tf.nn.max_pool(_conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='SAME')\n",
-    "    _pool_dr1 = tf.nn.dropout(_pool1, _keepratio)\n",
-    "    # Conv2\n",
-    "    _conv2 = tf.nn.relu(tf.nn.bias_add(\n",
-    "            tf.nn.conv2d(_pool_dr1, _w['wc2'], strides=[1, 1, 1, 1], padding='SAME')\n",
-    "            , _b['bc2']))\n",
-    "    _pool2 = tf.nn.max_pool(_conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='SAME')\n",
-    "    _pool_dr2 = tf.nn.dropout(_pool2, _keepratio)\n",
-    "    # Vectorize\n",
-    "    _dense1 = tf.reshape(_pool_dr2, [-1, _w['wd1'].get_shape().as_list()[0]])\n",
-    "    # Fc1\n",
-    "    _fc1 = tf.nn.relu(tf.add(tf.matmul(_dense1, _w['wd1']), _b['bd1']))\n",
-    "    _fc_dr1 = tf.nn.dropout(_fc1, _keepratio)\n",
-    "    # Fc2\n",
-    "    _out = tf.add(tf.matmul(_fc_dr1, _w['wd2']), _b['bd2'])\n",
-    "    \n",
-    "    # Return everything\n",
-    "    out = {\n",
-    "        'input_r': _input_r,\n",
-    "        'conv1': _conv1,\n",
-    "        'pool1': _pool1,\n",
-    "        'pool1_dr1': _pool_dr1,\n",
-    "        'conv2': _conv2,\n",
-    "        'pool2': _pool2,\n",
-    "        'pool_dr2': _pool_dr2,\n",
-    "        'dense1': _dense1,\n",
-    "        'fc1': _fc1,\n",
-    "        'fc_dr1': _fc_dr1,\n",
-    "        'out': _out\n",
+    "with tf.device('/gpu:2'):\n",
+    "    weights  = {\n",
+    "        'wc1': tf.Variable(tf.random_normal([3, 3, 1, 64], stddev=0.1)),\n",
+    "        'wc2': tf.Variable(tf.random_normal([3, 3, 64, 128], stddev=0.1)),\n",
+    "        'wd1': tf.Variable(tf.random_normal([7*7*128, 1024], stddev=0.1)),\n",
+    "        'wd2': tf.Variable(tf.random_normal([1024, n_output], stddev=0.1))\n",
     "    }\n",
-    "    return out\n",
+    "    biases   = {\n",
+    "        'bc1': tf.Variable(tf.random_normal([64], stddev=0.1)),\n",
+    "        'bc2': tf.Variable(tf.random_normal([128], stddev=0.1)),\n",
+    "        'bd1': tf.Variable(tf.random_normal([1024], stddev=0.1)),\n",
+    "        'bd2': tf.Variable(tf.random_normal([n_output], stddev=0.1))\n",
+    "    }\n",
+    "    def conv_basic(_input, _w, _b, _keepratio):\n",
+    "        # Input\n",
+    "        _input_r = tf.reshape(_input, shape=[-1, 28, 28, 1])\n",
+    "        # Conv1\n",
+    "        _conv1 = tf.nn.conv2d(_input_r, _w['wc1'], strides=[1, 1, 1, 1], padding='SAME')\n",
+    "        _conv1 = tf.nn.batch_normalization(_conv1, 0.001, 1.0, 0, 1, 0.0001)\n",
+    "        _conv1 = tf.nn.relu(tf.nn.bias_add(_conv1, _b['bc1']))\n",
+    "        _pool1 = tf.nn.max_pool(_conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='SAME')\n",
+    "        _pool_dr1 = tf.nn.dropout(_pool1, _keepratio)\n",
+    "        # Conv2\n",
+    "        _conv2 = tf.nn.conv2d(_pool_dr1, _w['wc2'], strides=[1, 1, 1, 1], padding='SAME')\n",
+    "        _conv2 = tf.nn.batch_normalization(_conv2, 0.001, 1.0, 0, 1, 0.0001)\n",
+    "        _conv2 = tf.nn.relu(tf.nn.bias_add(_conv2, _b['bc2']))\n",
+    "        _pool2 = tf.nn.max_pool(_conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='SAME')\n",
+    "        _pool_dr2 = tf.nn.dropout(_pool2, _keepratio)\n",
+    "        # Vectorize\n",
+    "        _dense1 = tf.reshape(_pool_dr2, [-1, _w['wd1'].get_shape().as_list()[0]])\n",
+    "        # Fc1\n",
+    "        _fc1 = tf.nn.relu(tf.add(tf.matmul(_dense1, _w['wd1']), _b['bd1']))\n",
+    "        _fc_dr1 = tf.nn.dropout(_fc1, _keepratio)\n",
+    "        # Fc2\n",
+    "        _out = tf.add(tf.matmul(_fc_dr1, _w['wd2']), _b['bd2'])\n",
+    "        # Return everything\n",
+    "        out = {\n",
+    "            'input_r': _input_r,\n",
+    "            'conv1': _conv1,\n",
+    "            'pool1': _pool1,\n",
+    "            'pool1_dr1': _pool_dr1,\n",
+    "            'conv2': _conv2,\n",
+    "            'pool2': _pool2,\n",
+    "            'pool_dr2': _pool_dr2,\n",
+    "            'dense1': _dense1,\n",
+    "            'fc1': _fc1,\n",
+    "            'fc_dr1': _fc_dr1,\n",
+    "            'out': _out\n",
+    "        }\n",
+    "        return out\n",
     "\n",
+    "    # tf Graph input\n",
+    "    x = tf.placeholder(tf.float32, [None, n_input])\n",
+    "    y = tf.placeholder(tf.float32, [None, n_output])\n",
+    "    keepratio = tf.placeholder(tf.float32)\n",
     "\n",
-    "# tf Graph input\n",
-    "x = tf.placeholder(tf.float32, [None, n_input])\n",
-    "y = tf.placeholder(tf.float32, [None, n_output])\n",
-    "keepratio = tf.placeholder(tf.float32)\n",
-    "\n",
-    "# Functions! \n",
-    "_pred = conv_basic(x, weights, biases, keepratio)['out']\n",
-    "cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(_pred, y))\n",
-    "optm = tf.train.AdamOptimizer(learning_rate=learning_rate).minimize(cost)\n",
-    "_corr = tf.equal(tf.argmax(_pred,1), tf.argmax(y,1)) # Count corrects\n",
-    "accr = tf.reduce_mean(tf.cast(_corr, tf.float32)) # Accuracy\n",
-    "init = tf.initialize_all_variables()\n",
+    "    # Functions! \n",
+    "    _pred = conv_basic(x, weights, biases, keepratio)['out']\n",
+    "    cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(_pred, y))\n",
+    "    optm = tf.train.AdamOptimizer(learning_rate=learning_rate).minimize(cost)\n",
+    "    _corr = tf.equal(tf.argmax(_pred,1), tf.argmax(y,1)) # Count corrects\n",
+    "    accr = tf.reduce_mean(tf.cast(_corr, tf.float32)) # Accuracy\n",
+    "    init = tf.initialize_all_variables()\n",
     "\n",
     "# Saver \n",
     "save_step = 1;\n",
@@ -150,28 +148,314 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 000/005 cost: 0.382952356\n",
-      " Training accuracy: 0.990\n",
-      " Test accuracy: 0.981\n",
-      "Epoch: 001/005 cost: 0.049980697\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.990\n",
-      "Epoch: 002/005 cost: 0.031380451\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.990\n",
-      "Epoch: 003/005 cost: 0.023614863\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.991\n",
-      "Epoch: 004/005 cost: 0.018574232\n",
+      "Epoch: 000/100 cost: 0.317963983\n",
       " Training accuracy: 0.980\n",
+      " Test accuracy: 0.979\n",
+      "Epoch: 001/100 cost: 0.049138199\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.988\n",
+      "Epoch: 002/100 cost: 0.030748716\n",
+      " Training accuracy: 0.990\n",
+      " Test accuracy: 0.988\n",
+      "Epoch: 003/100 cost: 0.023464642\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.990\n",
+      "Epoch: 004/100 cost: 0.016969528\n",
+      " Training accuracy: 1.000\n",
       " Test accuracy: 0.993\n",
+      "Epoch: 005/100 cost: 0.013521486\n",
+      " Training accuracy: 0.990\n",
+      " Test accuracy: 0.992\n",
+      "Epoch: 006/100 cost: 0.011437905\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 007/100 cost: 0.009204081\n",
+      " Training accuracy: 0.990\n",
+      " Test accuracy: 0.992\n",
+      "Epoch: 008/100 cost: 0.007714789\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.992\n",
+      "Epoch: 009/100 cost: 0.006281783\n",
+      " Training accuracy: 0.980\n",
+      " Test accuracy: 0.992\n",
+      "Epoch: 010/100 cost: 0.005473050\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.992\n",
+      "Epoch: 011/100 cost: 0.004620765\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.992\n",
+      "Epoch: 012/100 cost: 0.003844352\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 013/100 cost: 0.003640684\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 014/100 cost: 0.003253224\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 015/100 cost: 0.002993146\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.992\n",
+      "Epoch: 016/100 cost: 0.002448225\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 017/100 cost: 0.001732611\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 018/100 cost: 0.001744996\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 019/100 cost: 0.001561733\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 020/100 cost: 0.001194611\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 021/100 cost: 0.000866844\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 022/100 cost: 0.001071072\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 023/100 cost: 0.000854188\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 024/100 cost: 0.000577242\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 025/100 cost: 0.000714487\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 026/100 cost: 0.000545236\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 027/100 cost: 0.000556886\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 028/100 cost: 0.000613636\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 029/100 cost: 0.000437279\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 030/100 cost: 0.000444570\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 031/100 cost: 0.000333959\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 032/100 cost: 0.000258017\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 033/100 cost: 0.000287596\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.992\n",
+      "Epoch: 034/100 cost: 0.000354593\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.992\n",
+      "Epoch: 035/100 cost: 0.000300815\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.992\n",
+      "Epoch: 036/100 cost: 0.000290043\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.992\n",
+      "Epoch: 037/100 cost: 0.000173298\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 038/100 cost: 0.000334675\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 039/100 cost: 0.000372615\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 040/100 cost: 0.000248539\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 041/100 cost: 0.000237681\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 042/100 cost: 0.000098128\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 043/100 cost: 0.000207880\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 044/100 cost: 0.000194980\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 045/100 cost: 0.000109472\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 046/100 cost: 0.000072535\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 047/100 cost: 0.000220219\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 048/100 cost: 0.000064737\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 049/100 cost: 0.000170643\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 050/100 cost: 0.000129981\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 051/100 cost: 0.000084596\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 052/100 cost: 0.000082471\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 053/100 cost: 0.000152638\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 054/100 cost: 0.000087179\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 055/100 cost: 0.000115949\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 056/100 cost: 0.000098979\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 057/100 cost: 0.000189399\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 058/100 cost: 0.000199186\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 059/100 cost: 0.000024620\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 060/100 cost: 0.000120632\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 061/100 cost: 0.000048446\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 062/100 cost: 0.000063903\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 063/100 cost: 0.000134409\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.992\n",
+      "Epoch: 064/100 cost: 0.000083965\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 065/100 cost: 0.000011597\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 066/100 cost: 0.000358544\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 067/100 cost: 0.000203931\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 068/100 cost: 0.000067123\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 069/100 cost: 0.000032998\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 070/100 cost: 0.000035879\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 071/100 cost: 0.000107068\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 072/100 cost: 0.000075117\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 073/100 cost: 0.000065465\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 074/100 cost: 0.000021151\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 075/100 cost: 0.000007372\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 076/100 cost: 0.000009812\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 077/100 cost: 0.000104305\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 078/100 cost: 0.000330017\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.992\n",
+      "Epoch: 079/100 cost: 0.000061197\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 080/100 cost: 0.000014255\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 081/100 cost: 0.000061332\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 082/100 cost: 0.000035066\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 083/100 cost: 0.000064155\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 084/100 cost: 0.000031453\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.992\n",
+      "Epoch: 085/100 cost: 0.000004603\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 086/100 cost: 0.000001383\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 087/100 cost: 0.000048827\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 088/100 cost: 0.000160180\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 089/100 cost: 0.000067370\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 090/100 cost: 0.000065727\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 091/100 cost: 0.000027757\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 092/100 cost: 0.000007617\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.993\n",
+      "Epoch: 093/100 cost: 0.000033619\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 094/100 cost: 0.000005967\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 095/100 cost: 0.000185210\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 096/100 cost: 0.000001873\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 097/100 cost: 0.000125004\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 098/100 cost: 0.000042005\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
+      "Epoch: 099/100 cost: 0.000007795\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.994\n",
       "Optimization Finished.\n"
      ]
     }
@@ -236,7 +520,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Test accuracy: 0.993\n"
+      " Test accuracy: 0.994\n"
      ]
     }
    ],
